2002-02-04  Stephen F. Booth  <sbooth@gnu.org>

	* win/cgicc.dsp: Modified for version 3.2
	* win/cgicc.dsw: Modified for version 3.2
	* win/cookie.dsp: Added
	* win/dns.dsp: Modified for version 3.2
	* win/example.dsp: Modified for version 3.2
	* win/test.dsp: Modified for version 3.2
	* win/upload.dsp: Added
	* THANKS: Thanks to Quintin Connell

2002-01-19  Stephen F. Booth  <sbooth@gnu.org>

	* demo/Makefile.am: Distribute cookie.html, cgicc.css
	* demo/cgicc.css: Added

2002-01-09  Stephen F. Booth  <sbooth@gnu.org>

	* README: Updated for 3.2
	* NEWS: Updated for 3.2
	* Makefile.am: Changed configure.in to configure.ac
	* doc/Makefile.am: Added install-data-local target
	* Makefile.am: Added DIST_SUBDIRS, distribute COPYING.DOC
	* Added files COPYING.LIB and COPYING.DOC

2001-09-04  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/HTMLAttribute.h: Removed <vector> from #includes
	* cgicc/HTMLElementList.h: Added <vector> to #includes
	* cgicc/HTTPHeader.h: Added <vector> to #includes
	* cgicc/HTTPResponseHeader.h: Added <vector> to #includes

2001-09-03  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/HTTPHeaders.h: Added new class HTTPResponseHeader, and
	restructured HTTPNPHeader to be a subclass of HTTPResponseHeader
	* cgicc/HTTPHeaders.cpp: Same as above
	* cgicc/CgiUtils.h: Fixed debug logging for namespaces
	* cgicc/HTTPCookie.{h,cpp}: New files (code split from HTTPHeaders)
	* cgicc/HTTPHeaders.{h,cpp}: Removed HTTPCookie code
	* cgicc/CgiEnvironment.cpp: Fixed includes for HTTPCookie.h
	* cgicc/HTTPHeaders.h(HTTPHeader): Added setCookie method
	* cgicc/HTTPHeaders.cpp: Added logic to render() for HTTPCookies
	* cgicc/CgiEnvironment.h: Added cookie_iterator, 
	const_cookie_iterator typedefs
	* demo/Makefile.am: Added target cookie.cgi
	* demo/cookie.{cpp,html}: New files
	* demo/README: Updated for new XHTML files and cookie.cgi
	* configure.in: Renamed to configure.ac for autoconf 2.52
	* cgicc/HTMLAttributes.{h,cpp}: Split into four new files,